# NeoGeoEmu

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android/: android_audio.cpp  android_input.cpp  android_romloader.cpp  android_state.cpp  android_video.cpp  globals.h  jni_bridge.cpp  tchar.h
app/src/main/cpp/core/: README.md
app/src/main/java/org/neogeoemu/app/: NeoGeoEmuApp.kt
app/src/main/java/org/neogeoemu/app/data/: GameScanner.kt  Prefs.kt
app/src/main/java/org/neogeoemu/app/emulation/: EmulatorBridge.kt  KeyMapper.kt
app/src/main/java/org/neogeoemu/app/ui/: EmulationActivity.kt  MainActivity.kt
app/src/main/java/org/neogeoemu/app/ui/screens/: EmulationScreen.kt  GameListScreen.kt  SettingsScreen.kt
app/src/main/java/org/neogeoemu/app/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-hdpi/: .gitkeep
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
